# MILESTONE2-GROW

./: .env.example  .gitignore  API_GUIDE.md  DEPLOYMENT_GUIDE.md  Procfile  README.md  UI_GUIDE.md  package-lock.json  pyproject.toml  requirements-deploy.txt  requirements.txt  vercel.json
.github/workflows/: corpus-update.yml
.vercel-tmp/: vercel-deploy.cjs  vercel-login.cjs
app/: config.py
app/api/: README.md  __init__.py  main.py
app/corpus/: __init__.py  loader.py  models.py
app/guardrails/: README.md  __init__.py  classifier.py  generator.py  pii_filter.py  refusal.py  validator.py
app/rag/: README.md  __init__.py  context_assembler.py  debug.py  embedder.py  llm.py  retriever.py  scheme_detector.py
corpus/: README.md  last_updated.json  manifest.yaml  schemes.json
data/: chroma_embeddings.parquet  corpus_meta.db
docs/: phase-wise-architecture.md  problemStatment.md
docs/edge-cases/: README.md  phase-0-edge-cases.md  phase-1-edge-cases.md  phase-2-edge-cases.md  phase-3-edge-cases.md  (+3 more)
ingestion/: README.md  __init__.py  chunk_all.py  fetch_all.py  fetcher.py  index_chunks.py  metadata.py  parse_all.py  rebuild_index.py  run_pipeline.py  smoke_retrieval.py
scripts/: README.md  export_embeddings_to_parquet.py  show_embeddings.py  validate_phase0.py
tests/: README.md  conftest.py  golden_queries.json  test_phase0_corpus.py  test_phase1_1_fetcher.py  test_phase1_2_and_1_3.py  test_phase1_4_indexer.py  test_phase1_5_metadata.py  test_phase1_ingestion.py  test_phase2_retrieval.py  test_phase3_guardrails.py
ui/: README.md  index.html
(+77 files in other folders)
