[project]
name = "mutual-fund-faq-assistant"
version = "0.1.0"
description = "Facts-only mutual fund FAQ assistant (RAG, closed Groww corpus)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]
ingestion = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]
rag = [
    "chromadb>=0.5",
    "sentence-transformers",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
